Change dentist resource to plural
