# dentistAPI/dentistAPI/v1/routes.py
@@ -1,18 +1,11 @@
 # -*- coding: utf-8 -*-
 
-###
-### DO NOT CHANGE THIS FILE
-### 
-### The code is auto generated, your change will be overwritten by 
-### code generating.
-###
 from __future__ import absolute_import
 
-from .api.dentist import Dentist
-from .api.dentist_id import DentistId
-
+from .api.dentists import Dentists
+from .api.dentists_id import DentistsId
 
 routes = [
-    dict(resource=Dentist, urls=['/dentist'], endpoint='dentist'),
-    dict(resource=DentistId, urls=['/dentist/<id>'], endpoint='dentist_id'),
+    dict(resource=Dentists, urls=['/dentists'], endpoint='dentists'),
+    dict(resource=DentistsId, urls=['/dentists/<id>'], endpoint='dentists_id'),
 ]
